Fix nav size issue on Safari

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -162,7 +162,7 @@ button:focus {
     text-decoration: none;
     font: 20px Raleway;
     margin: 0px 10px;
-    padding: 10px 10px;
+    padding: 10.5px 10.5px;
     position: relative;
     cursor: pointer;
 }
